# CodeForge-AI

./: .eslintrc.json  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  demo_workflow.py  package-lock.json  package.json  start-dev.ps1  turbo.json
.github/workflows/: ci.yml
.turbo/cache/: 15db4cf447efa0d7-manifest.json  15db4cf447efa0d7-meta.json  81f94bfe96ccdf57-manifest.json  81f94bfe96ccdf57-meta.json  81f94bfe96ccdf57.tar.zst  85d86176f4b7c8af-manifest.json  (+8 more)
apps/agent-orchestrator/: Dockerfile  agent_runtime.py  approval_handler.py  checkpoint_manager.py  event_publisher.py  graph_builder.py  main.py  pyproject.toml  recovery_manager.py  requirements.txt  state_models.py  task_router.py  workflow.py  workflow_manager.py
apps/agent-workers/: Dockerfile  agent.py  main.py  pyproject.toml  requirements.txt
apps/api/: Dockerfile  alembic.ini  auth.py  main.py  pyproject.toml  requirements.txt  run.py  verify_output.txt  verify_phase2.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2026_06_24_workflow_tables.py  2026_06_25_collaboration_tables.py  2026_06_25_cost_optimization_tables.py  2026_06_25_devops_tables.py  2026_06_25_frontend_tables.py  2026_06_25_observability_tables.py  2026_06_25_qa_tables.py  2026_06_25_security_tables.py  2026_06_26_autonomous_controller_tables.py  2026_06_26_workflow_status_fields.py
apps/api/app/: authz.py  config.py  database.py  dependencies.py  exceptions.py  middleware.py  models.py  security.py
apps/api/app/repositories/: approval.py  backend.py  base.py  collaboration.py  controller.py  cost.py  database.py  devops.py  enterprise.py  frontend.py  observability.py  project.py  qa.py  security.py  user.py  workflow.py
apps/api/app/routers/: approval.py  auth.py  backend.py  collaboration.py  controller.py  cost.py  database.py  devops.py  enterprise.py  frontend.py  health.py  observability.py  project.py  qa.py  security.py  workflow.py
apps/api/app/schemas/: __init__.py  approval.py  architect.py  backend.py  collaboration.py  controller.py  cost.py  database.py  devops.py  enterprise.py  frontend.py  observability.py  project.py  qa.py  security.py  token.py  user.py  workflow.py
apps/api/app/services/: approval.py  backend.py  collaboration.py  controller.py  cost.py  database.py  devops.py  enterprise.py  frontend.py  observability.py  project.py  qa.py  security.py  user.py  workflow.py
apps/api/tests/: conftest.py  test_approval_governance.py  test_auth.py  test_autonomous_controller.py  test_backend_agent.py  test_collaboration_engine.py  test_cost_optimization_agent.py  test_database_agent.py  test_devops_agent.py  test_enterprise.py  test_frontend_agent.py  test_milestone2.py  test_observability_agent.py  test_qa_agent.py  test_security_agent.py  test_workflow_orchestrator.py
apps/approval-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
apps/notification-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
docs/: DEVELOPER_GUIDE.md  IMPLEMENTATION_PLAN.md  INTEGRATION_SPRINT_1_PLAN.md  PRODUCTION_READINESS_REPORT.md  PROJECT_AUDIT.md  PROPOSED_CHANGES_INTEGRATION_SPRINT_1.md  USER_GUIDE.md  USER_REVIEW_INTEGRATION_SPRINT_1.md  VERIFICATION_PLAN_INTEGRATION_SPRINT_1.md  phase2_blueprint.md  walkthrough.md
(+39 files in other folders)
