[tool.poetry]
name = "agent-orchestrator"
version = "1.0.0"
description = "LangGraph Orchestrator Service for CodeForge AI"
authors = ["CodeForge AI Team"]

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.0.30"
langchain = "^0.1.13"
langchain-openai = "^0.1.1"
langchain-anthropic = "^0.1.4"
pydantic = "^2.6.4"
kafka-python = "^2.0.2"
redis = "^5.0.3"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
