[tool.poetry]
name = "approval-service"
version = "1.0.0"
description = "Human Approval Service for CodeForge AI"
authors = ["CodeForge AI Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
kafka-python = "^2.0.2"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
redis = "^5.0.3"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
