[tool.poetry]
name = "notification-service"
version = "1.0.0"
description = "Broadcast and Notification Service for CodeForge AI"
authors = ["CodeForge AI Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
kafka-python = "^2.0.2"
redis = "^5.0.3"
requests = "^2.31.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
